# flp-log-gatherer

./: .gitignore  EXAMPLES.md  MANIFEST.in  README.md  build_and_release.sh  main.py  pyproject.toml  setup.py  setup.sh
config/: config.yaml  hosts  hosts.example
config/p2-prod/: config.yaml
config/p2-staging/: config.yaml
src/: __init__.py  cli.py  compression_manager.py  config_manager.py  inventory_parser.py  journal_collector.py  log_collector.py  probe_manager.py  raw_mode_manager.py  rsync_manager.py
